--- a/COMP_345_A1_v9.vcxproj
+++ b/COMP_345_A1_v9.vcxproj
@@ -140,6 +140,29 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="COMP_345_A1_v9.cpp" />
+    <ClCompile Include="Source Files\Cards.cpp" />
+    <ClCompile Include="Source Files\CardsDriver.cpp" />
+    <ClCompile Include="Source Files\GameEngine.cpp" />
+    <ClCompile Include="Source Files\GameEngineDriver.cpp" />
+    <ClCompile Include="Source Files\Main.cpp" />
+    <ClCompile Include="Source Files\Map.cpp" />
+    <ClCompile Include="Source Files\MapDriver.cpp" />
+    <ClCompile Include="Source Files\Orders.cpp" />
+    <ClCompile Include="Source Files\OrdersDriver.cpp" />
+    <ClCompile Include="Source Files\Player.cpp" />
+    <ClCompile Include="Source Files\PlayerDriver.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Header Files\Cards.h" />
+    <ClInclude Include="Header Files\Drivers.h" />
+    <ClInclude Include="Header Files\GameEngine.h" />
+    <ClInclude Include="Header Files\Map.h" />
+    <ClInclude Include="Header Files\Orders.h" />
+    <ClInclude Include="Header Files\Player.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include=".gitattributes" />
+    <None Include=".gitignore" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
