I think Im done map.cpp

--- a/COMP_345_A1_v9.vcxproj
+++ b/COMP_345_A1_v9.vcxproj
@@ -162,6 +162,7 @@
   <ItemGroup>
     <None Include=".gitattributes" />
     <None Include=".gitignore" />
+    <None Include="Map Files\europe.map" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
