--- a/COMP_345_A1_v9.vcxproj
+++ b/COMP_345_A1_v9.vcxproj
@@ -163,6 +163,7 @@
     <None Include=".gitattributes" />
     <None Include=".gitignore" />
     <None Include="Map Files\europe.map" />
+    <None Include="Map Files\Illes_Balears.map" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
