added new files and classes for them

--- a/COMP_345_A1_v9.vcxproj
+++ b/COMP_345_A1_v9.vcxproj
@@ -141,8 +141,10 @@
   <ItemGroup>
     <ClCompile Include="Source Files\Cards.cpp" />
     <ClCompile Include="Source Files\CardsDriver.cpp" />
+    <ClCompile Include="Source Files\CommandProcessing.cpp" />
     <ClCompile Include="Source Files\GameEngine.cpp" />
     <ClCompile Include="Source Files\GameEngineDriver.cpp" />
+    <ClCompile Include="Source Files\LoggingObserver.cpp" />
     <ClCompile Include="Source Files\Main.cpp" />
     <ClCompile Include="Source Files\Map.cpp" />
     <ClCompile Include="Source Files\MapDriver.cpp" />
@@ -153,8 +155,10 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Header Files\Cards.h" />
+    <ClInclude Include="Header Files\CommandProcessing.h" />
     <ClInclude Include="Header Files\Drivers.h" />
     <ClInclude Include="Header Files\GameEngine.h" />
+    <ClInclude Include="Header Files\LoggingObserver.h" />
     <ClInclude Include="Header Files\Map.h" />
     <ClInclude Include="Header Files\Orders.h" />
     <ClInclude Include="Header Files\Player.h" />
