--- a/COMP_345_A1_v9.vcxproj
+++ b/COMP_345_A1_v9.vcxproj
@@ -141,6 +141,7 @@
   <ItemGroup>
     <ClCompile Include="Source Files\Cards.cpp" />
     <ClCompile Include="Source Files\CardsDriver.cpp" />
+    <ClCompile Include="Source Files\CommandDriver.cpp" />
     <ClCompile Include="Source Files\CommandProcessing.cpp" />
     <ClCompile Include="Source Files\GameEngine.cpp" />
     <ClCompile Include="Source Files\GameEngineDriver.cpp" />
