--- a/COMP_345_A1_v9.vcxproj.filters
+++ b/COMP_345_A1_v9.vcxproj.filters
@@ -92,4 +92,7 @@
     <None Include="Map Files\germany2.map" />
     <None Include="Map Files\Illes_Balears.map" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="Map Files\test.txt" />
+  </ItemGroup>
 </Project>
