--- a/COMP_345_A1_v9.vcxproj
+++ b/COMP_345_A1_v9.vcxproj
@@ -139,20 +139,21 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Driver Files\LoggingObserverDriver.cpp" />
     <ClCompile Include="Source Files\Cards.cpp" />
-    <ClCompile Include="Source Files\CardsDriver.cpp" />
-    <ClCompile Include="Source Files\CommandDriver.cpp" />
+    <ClCompile Include="Driver Files\CardsDriver.cpp" />
+    <ClCompile Include="Driver Files\CommandProcessingDriver.cpp" />
     <ClCompile Include="Source Files\CommandProcessing.cpp" />
     <ClCompile Include="Source Files\GameEngine.cpp" />
-    <ClCompile Include="Source Files\GameEngineDriver.cpp" />
+    <ClCompile Include="Driver Files\GameEngineDriver.cpp" />
     <ClCompile Include="Source Files\LoggingObserver.cpp" />
-    <ClCompile Include="Source Files\Main.cpp" />
+    <ClCompile Include="Driver Files\Main.cpp" />
     <ClCompile Include="Source Files\Map.cpp" />
     <ClCompile Include="Source Files\MapDriver.cpp" />
     <ClCompile Include="Source Files\Orders.cpp" />
-    <ClCompile Include="Source Files\OrdersDriver.cpp" />
+    <ClCompile Include="Driver Files\OrdersDriver.cpp" />
     <ClCompile Include="Source Files\Player.cpp" />
-    <ClCompile Include="Source Files\PlayerDriver.cpp" />
+    <ClCompile Include="Driver Files\PlayerDriver.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Header Files\Cards.h" />
