--- a/COMP_345_A1_v9.vcxproj.filters
+++ b/COMP_345_A1_v9.vcxproj.filters
@@ -100,8 +100,15 @@
     <None Include="Map Files\europe.map" />
     <None Include="Map Files\germany2.map" />
     <None Include="Map Files\Illes_Balears.map" />
+    <None Include="Map Files\austria.map" />
+    <None Include="Map Files\canada.map" />
+    <None Include="Map Files\cow.map" />
+    <None Include="Map Files\greece.map" />
+    <None Include="Map Files\sudoku.map" />
+    <None Include="Map Files\us.map" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="Map Files\test.txt" />
+    <Text Include="gameLog.txt" />
   </ItemGroup>
 </Project>
